# AI-Driven-Development-AIDD-

AIDD 30-Day Challenge/: task-1.md
AIDD 30-Day Challenge/Task-04/: .gitignore  GEMINI.md  agent.py  app.py  pyproject.toml  storage.json  tools.py
AIDD 30-Day Challenge/Task-04/.files/c471c742-e94b-46c7-a8f9-2f43d441e207/: c37ece2d-9d4b-41f4-9f86-86485fe977e1.docx
